--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 		 <i class="bi  d-flex align-items-center ms-4" style="margin-left: 40.5rem!important;"><span>
 		 <a href="https://twitter.com/TasteofMouth " class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/TasteofMouth/ " class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.instagram.com/taste_of_mouth/" class="instagram"><i class="bx bxl-instagram"></i></a></span></i>
+                <a href="https://www.instagram.com/taste_of_mouth/" class="instagram"><i class="bx bxl-instagram"></i></a>
+				 <a href=" https://www.linkedin.com/in/tasteofmouth/ " class="linkedin"><i class="bx bxl-linkedin"></i></a></span></i>
 		 
 		
       </div>
@@ -65,7 +66,7 @@
 
     <h1 class="logo me-auto me-lg-0">
     <img src="assets/img/TOM.jpg
-    " alt="" width="90" height="90">
+    " alt="" width="60" height="90">
    
     <a href="index.html">TasteOfMouth</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
@@ -78,7 +79,7 @@
           <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
           <!-- <li><a class="nav-link scrollto" href="#specials">Specials</a></li> -->
            <li><a class="nav-link scrollto" href="#events">Events</a></li>
-           <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
+           <!-- <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li> -->
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a> -->
             <!-- <ul> -->
@@ -469,8 +470,8 @@ Godhi paysa
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Architecto ut aperiam autem id</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+                    <p class="fst-italic" style="color:black">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
+                    <p  style="color:black">Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-1.png" alt="" class="img-fluid">
@@ -479,10 +480,10 @@ Godhi paysa
               </div>
               <div class="tab-pane" id="tab-2">
                 <div class="row">
-                  <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Et blanditiis nemo veritatis excepturi</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
+                  <div class="col-lg-8 details order-2 order-lg-1" style="color:black">
+                    <h3 class="fst-italic" style="color:black">Et blanditiis nemo veritatis excepturi</h3>
+                    <p  style="color:black">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
+                    <p  style="color:black">Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-2.png" alt="" class="img-fluid">
@@ -492,9 +493,9 @@ Godhi paysa
               <div class="tab-pane" id="tab-3">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Impedit facilis occaecati odio neque aperiam sit</h3>
-                    <p class="fst-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
-                    <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
+                    <h3  style="color:black">Impedit facilis occaecati odio neque aperiam sit</h3>
+                    <p  style="color:black" class="fst-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
+                    <p  style="color:black">Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-3.png" alt="" class="img-fluid">
@@ -943,13 +944,13 @@ Godhi paysa
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Shubhashree Nilaya, Jaladharshini Layout, near jain pu college Bangalore 560094.</p>
+                <p  style="color:black">Shubhashree Nilaya, Jaladharshini Layout, near jain pu college Bangalore 560094.</p>
               </div>
 
               <div class="open-hours">
                 <i class="bi bi-clock"></i>
                 <h4>Open Hours:</h4>
-                <p>
+                <p  style="color:black">
                   Monday-Saturday:<br>
                   11:00 AM - 2300 PM
                 </p>
@@ -958,13 +959,13 @@ Godhi paysa
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p  style="color:black">info@example.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p  style="color:black">+91  9380828492</p>
               </div>
 
             </div>
