--- a/index.html
+++ b/index.html
@@ -530,10 +530,10 @@
                 <strong>Email:</strong> tasteofmouth21@gmail.com<br>
               </p>
               <div class="social-links mt-3">
-                <a href="https://twitter.com/TasteofMouth " class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="https://www.facebook.com/TasteofMouth/ " class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.instagram.com/taste_of_mouth/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/tasteofmouth/ " class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="http://www.twitter.com/TasteofMouth/" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="http://www.facebook.com/TasteofMouth/ " class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="http://www.instagram.com/taste_of_mouth/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="http://www.linkedin.com/in/tasteofmouth/ " class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>			 
           </div>
