--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-phone d-flex align-items-center"><span>+91 9380828492</span></i>
         <i class="bi bi-clock d-flex align-items-center ms-4"><span> MON-SUN: 8AM - 10PM</span></i>
-		 <i class="bi  d-flex align-items-center ms-4"style="margin-left: 40.5rem!important;"><span>
-		 <a href="https://www.twitter.com/TasteofMouth" class="twitter"><i class="bx bxl-twitter"></i></a>
+		 <i class="bi  d-flex align-items-center ms-4"style="margin-left: 40.5rem!important;" ><span>
+		 <a href="https://www.twitter.com/TasteofMouth" class="twitter"><i class="bx bxl-twitter" target="_top""></i></a>
          <a href="https://www.facebook.com/TasteofMouth/ " class="facebook"><i class="bx bxl-facebook"></i></a>
          <a href="https://www.instagram.com/taste_of_mouth/" class="instagram"><i class="bx bxl-instagram"></i></a>
 		 <a href="https://www.linkedin.com/in/tasteofmouth/ " class="linkedin"><i class="bx bxl-linkedin"></i></a></span></i>	 
