--- a/index.html
+++ b/index.html
@@ -53,17 +53,19 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
 
       <div class="contact-info d-flex align-items-center">
+	 
         <i class="bi bi-phone d-flex align-items-center"><span>+91 9380828492</span></i>
         <i class="bi bi-clock d-flex align-items-center ms-4"><span> MON-SUN: 8AM - 10PM</span></i>
-		 <i class="bi  d-flex align-items-center ms-4"style="margin-left: 40.5rem!important;" ><span>
-		 <a href="https://www.twitter.com/TasteofMouth/" target="_blank" class="twitter"><i class="bx bxl-twitter" ></i></a>
-         <a href="https://www.facebook.com/TasteofMouth/"  target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+		 <i class="bi  d-flex align-items-center ms-4" ><span>
+		 <a href="https://www.twitter.com/TasteofMouth/"  target="_blank" class="twitter"><i class="bx bxl-twitter" ></i></a>
+         <a href="https://www.facebook.com/TasteofMouth/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
          <a href="https://www.instagram.com/taste_of_mouth/"  target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-		 <a href="https://www.linkedin.com/in/tasteofmouth/"  target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a></span></i>	 
+		 <a href="https://www.linkedin.com/in/tasteofmouth/"  target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a></span></i>
       </div>  
     </div>
   </div>
 
+   
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-cente">
     <div class="container-fluid container-xl position-relative text-center d-flex align-items-center justify-content-lg-between">
@@ -375,11 +377,22 @@
             <div class="error-message"></div>
             <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
           </div>
-          <div class="text-center"><button type="submit">Book Order</button></div>
-        </form>
-      
+		  <div class="text-center"><button type="submit">Book Order</button></div>
+		  </form>  
+ </div>		  
+	<!-- 	<div><button id="open">Book Order</button> </div>      
+      <div class="modal" id="modal">
+			<div class="modal-header">
+				<div class="title">TasteOfMouth</div>
+					<button id="close">&times;</button>
+			</div>
+	 <div class="modal-body">
+	 <p>BOOKING FACILITY COMING SOON !!!<p>
+		</div>
+  </div>
+  <div id="overlay"></div> -->
 
-      </div>
+     
     </section><!-- End Book A Table Section -->
 
    
